# PMPP-Compositional-GPU

./: CMakeLists.txt  README.md  draw.py
gpu_task/: CMakeLists.txt  commen.h  main.cc
gpu_task/interfaces/: KernelInterface.hpp
gpu_task/kernel/: MinCUDA.cu  MinCUDA.h  NopCUDA.cu  NopCUDA.h  kernel.cu  kernel.h  minCUDA.cu  minCUDA.h  nopCUDA.cu  nopCUDA.h  nop_kernel.cu  nop_kernel.h
source/: Commons.hpp  main.cpp
source/algorithms/: DotProSmVec_GPU.hpp  DotPro_GPU.hpp  Increaser.hpp  MatDouble_GPU.hpp  Max_GPU.hpp  Min_GPU.hpp  Nop_GPU.cu  Nop_GPU.h  Nopper.hpp  QuickSorter.hpp  ReduceAdd.hpp  ReduceMin.hpp  Reorderer.hpp  SelectionSorter.hpp  gpuCommon.cu  gpuCommon.h
source/helper/: Comparator.hpp  quicksort.hpp
source/interfaces/: AlgorithmInterface.hpp  AlgorithmWrapper.hpp  Executor.hpp  LoadBalancer.hpp  PatternInterface.hpp  ThreadSafeQueue.hpp
source/interfaces/concurrentqueue-master/: blockingconcurrentqueue.h  concurrentqueue.h
source/pattern/: Composition.hpp  ForkJoin.hpp  Iteration.hpp  Map.hpp  Pipeline.hpp  Reduce.hpp  TaskPool.hpp
